--- a/src/app/pages/inventarios/show/insumos/create/create.component.html
+++ b/src/app/pages/inventarios/show/insumos/create/create.component.html
@@ -20,7 +20,7 @@
                         <div class="card-body">
                             <div class="row">
                               <div class="col-12 col-md-4">
-                                <img [src]="image" alt="..." class="img-thumbnail img-fluid">
+                                <img [src]="image" alt="..." class="img-thumbnail img-fluid" formControlName="imagen" accept="image/*">
                               </div>
                               <div class="col-12 col-md-8">
                                 <div class="pb-2">
