--- a/src/app/pages/consultas/index/index.component.html
+++ b/src/app/pages/consultas/index/index.component.html
@@ -26,8 +26,8 @@
                   <th></th>
                 </tr>
                 </thead>
-                <tbody *ngFor="let consulta of consultas | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
-                    <tr>
+                <tbody *ngIf="consultas.length > 0; else noConsultas">
+                    <tr *ngFor="let consulta of consultas | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                         <td>
                             <!-- <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2"> -->
                             {{ consulta.pacientable?.nombre }}
@@ -55,6 +55,11 @@
                         </td>
                     </tr>
                 </tbody>
+                <ng-template #noConsultas>
+                    <tr>
+                        <td colspan="5" class="text-center">Sin consultas</td>
+                    </tr>
+                </ng-template>
               </table>
             </div>
             <div class="card-footer">
