--- a/src/app/pages/historiales-medicos/create/create.component.html
+++ b/src/app/pages/historiales-medicos/create/create.component.html
@@ -19,7 +19,7 @@
                             <div class="col-12 col-md-3">
                                 <div class="form-group">
                                     <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="imagen" required (change)="imagenSeleccionada($event)">
+                                        <input type="file" class="custom-file-input" id="imagen" formControlName="imagen" (change)="imagenSeleccionada($event)">
                                         <label class="custom-file-label">Fotografía</label>
                                     </div>
                                 </div>
