--- a/src/app/pages/inventarios/index/index.component.html
+++ b/src/app/pages/inventarios/index/index.component.html
@@ -2,9 +2,7 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header text-secondary border-0">
-                <h3 class="card-title text-center">Todos los inventarios</h3>
-                <div class="card-tools">
-                </div>
+                <h3 class="card-title text-center">Todos los almacenes</h3>
             </div>
             <div class="card-body table-responsive p-0">
                 <table class="table table-striped table-valign-middle">
@@ -28,7 +26,7 @@
                     </tbody>
                     <ng-template #noinventarioes>
                         <tr>
-                            <td colspan="5" class="text-center">Sin inventarios</td>
+                            <td colspan="5" class="text-center">Sin almacenes</td>
                         </tr>
                     </ng-template>
                 </table>
