--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,7 +19,7 @@
                                 <div class="form-group">
                                     <label for="password">Contraseña</label>
                                     <div class="input-group mb-3">
-                                        <input type="{{ showPassword ? 'text' : 'password' }}" class="form-control" id="password" name="password" [(ngModel)]="credentials.password" required>
+                                        <input [attr.type]="showPassword ? 'text' : 'password'" class="form-control" id="password" name="password" [(ngModel)]="credentials.password" required>
                                         <button class="btn btn-pink" type="button" id="showPassword" (click)="showPassword = !showPassword"><i class="fas {{ showPassword ? 'fa-eye-slash' : 'fa-eye' }}"></i></button>
                                     </div>
                                 </div>
