--- a/src/app/pages/historiales-medicos/create/create.component.html
+++ b/src/app/pages/historiales-medicos/create/create.component.html
@@ -15,105 +15,153 @@
                             <option>Externo</option>
                             </select>
                         </div>
-                        <div class="row" *ngIf="historialMedicoForm.get('paciente')?.value === 'Empleado' || historialMedicoForm.get('paciente')?.value === 'Externo'">
-                            <div class="col-12 col-md-3">
-                                <div class="form-group">
-                                    <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="imagen" formControlName="imagen" (change)="imagenSeleccionada($event)">
-                                        <label class="custom-file-label">Fotografía</label>
+                        <div *ngIf="historialMedicoForm.get('paciente')?.value === 'Empleado' || historialMedicoForm.get('paciente')?.value === 'Externo'">
+                            <hr>
+                            <div class="row">
+                                <div class="col-12 col-md-3">
+                                    <div class="form-group">
+                                        <div class="custom-file">
+                                            <input type="file" class="custom-file-input" id="imagen" formControlName="imagen" (change)="imagenSeleccionada($event)">
+                                            <label class="custom-file-label">Fotografía</label>
+                                        </div>
+                                    </div>
+                                    <div class="pb-3">
+                                        <ng-container *ngIf="url; else defaultImage">
+                                            <img *ngIf="url" [src]="url" alt="Imagen seleccionada" class="img-thumbnail mx-auto d-block">
+                                        </ng-container>
+                                        <ng-template #defaultImage>
+                                            <img src="/assets/dist/img/user.png" alt="Imagen seleccionada" class="img-thumbnail mx-auto d-block">
+                                        </ng-template>
                                     </div>
                                 </div>
-                                <div class="pb-3">
-                                    <ng-container *ngIf="url; else defaultImage">
-                                        <img *ngIf="url" [src]="url" alt="Imagen seleccionada" class="img-thumbnail mx-auto d-block">
-                                    </ng-container>
-                                    <ng-template #defaultImage>
-                                        <img src="/assets/dist/img/user.png" alt="Imagen seleccionada" class="img-thumbnail mx-auto d-block">
-                                    </ng-template>
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-9">
-                                <div class="row">
-                                    <div class="col-12 col-md-6" [ngClass]="{'col-md-12': historialMedicoForm.get('paciente')?.value === 'Externo'}">
-                                        <div class="form-group">
-                                            <label>Nombre (s)</label>
-                                            <input type="text" class="form-control" id="nombre" formControlName="nombre">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="email">Correo electrónico</label>
-                                            <input type="text" class="form-control" id="email" formControlName="email">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Teléfono</label>
-                                            <div class="input-group">
-                                                <select class="custom-select" id="prefijoInternacional" style="width: 25%;" formControlName="prefijoInternacional">
-                                                <option selected>+52</option>
+                                <div class="col-12 col-md-9">
+                                    <div class="row">
+                                        <div class="col-12 col-md-6" [ngClass]="{'col-md-12': historialMedicoForm.get('paciente')?.value === 'Externo'}">
+                                            <div class="form-group">
+                                                <label>Nombre (s)</label>
+                                                <input type="text" class="form-control" id="nombre" formControlName="nombre">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="email">Correo electrónico</label>
+                                                <input type="text" class="form-control" id="email" formControlName="email">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Teléfono</label>
+                                                <div class="input-group">
+                                                    <select class="custom-select" id="prefijoInternacional" style="width: 25%;" formControlName="prefijoInternacional">
+                                                    <option selected>+52</option>
+                                                    </select>
+                                                    <input type="tel" class="form-control" id="telefono" style="width: 75%;" formControlName="telefono">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Sexo</label>
+                                                <select class="form-control text-center" id="sexo" formControlName="sexo">
+                                                <option value="" selected>-- Seleccione una opción --</option>
+                                                <option>F</option>
+                                                <option>M</option>
                                                 </select>
-                                                <input type="tel" class="form-control" id="telefono" style="width: 75%;" formControlName="telefono">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Fecha de nacimiento</label>
+                                                <input type="date" class="form-control" id="fechaNacimiento" formControlName="fechaNacimiento">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Peso</label>
+                                                <input type="number" class="form-control" id="peso" formControlName="peso">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="col-form-label">
+                                                    Altura
+                                                </label>
+                                                <div class="input-group mb-3">
+                                                    <input type="number" id="talla" class="form-control" formControlName="talla">
+                                                    <div class="input-group-append">
+                                                      <span class="input-group-text">m</span>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <label>Sexo</label>
-                                            <select class="form-control text-center" id="sexo" formControlName="sexo">
-                                            <option value="" selected>-- Seleccione una opción --</option>
-                                            <option>F</option>
-                                            <option>M</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Fecha de nacimiento</label>
-                                            <input type="date" class="form-control" id="fechaNacimiento" formControlName="fechaNacimiento">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Peso</label>
-                                            <input type="number" class="form-control" id="peso" formControlName="peso">
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="col-form-label">
-                                                Altura
-                                            </label>
-                                            <div class="input-group mb-3">
-                                                <input type="number" id="talla" class="form-control" formControlName="talla">
-                                                <div class="input-group-append">
-                                                  <span class="input-group-text">m</span>
+                                        <div class="col-12 col-md-6" [hidden]="historialMedicoForm.get('paciente')?.value === 'Externo'">
+                                            <div class="form-group">
+                                                <label>Número de empleado</label>
+                                                <div class="input-group mb-3">
+                                                    <input type="text" class="form-control" id="numero" formControlName="numero">
+                                                    <div class="input-group-append">
+                                                        <button class="btn btn-secondary" type="button" id="buscar" (click)="buscarEmpleado()"> <i class="fas fa-search"></i> Buscar datos</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label>RFC</label>
+                                                <input type="text" class="form-control" id="RFC" formControlName="RFC">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>CURP</label>
+                                                <input type="text" class="form-control" id="CURP" formControlName="CURP">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>IMSS</label>
+                                                <input type="text" class="form-control" id="IMSS" formControlName="IMSS">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Estado civil</label>
+                                                <select class="form-control text-center" id="estadoCivil" formControlName="estadoCivil">
+                                                <option value="" selected>-- Seleccione una opción --</option>
+                                                <option value="S">Soltero</option>
+                                                <option value="C">Casado por lo civil</option>
+                                                <!-- <option>Divorciado legalmente</option>
+                                                <option>Separado legalmente</option>
+                                                <option>Viudo de matrimonio civil</option> -->
+                                                </select>
+                                            </div>
+                                            <div>
+                                                <div class="card shadow-none bg-light">
+                                                    <div class="card-body row" [formGroup]="formDireccion">
+                                                        <div class="col-12 col-xl-12">
+                                                            <div class="form-group">
+                                                                <label>Calle</label>
+                                                                <input type="text" class="form-control" id="calle" formControlName="calle">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-12 col-xl-6">
+                                                            <div class="form-group">
+                                                                <label>Exterior</label>
+                                                                <input type="text" class="form-control" id="exterior" formControlName="exterior">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-12 col-xl-6">
+                                                            <div class="form-group">
+                                                                <label>Interior</label>
+                                                                <input type="text" class="form-control" id="interior" formControlName="interior">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-12 col-xl-12">
+                                                            <div class="form-group">
+                                                                <label>Colonia</label>
+                                                                <input type="text" class="form-control" id="colonia" formControlName="colonia">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col">
+                                                            <div class="form-group">
+                                                                <label>CP</label>
+                                                                <input type="text" class="form-control" id="CP" formControlName="CP">
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-12 col-md-6" [hidden]="historialMedicoForm.get('paciente')?.value === 'Externo'">
-                                        <div class="form-group">
-                                            <label>RFC</label>
-                                            <input type="text" class="form-control" id="RFC" formControlName="RFC">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>CURP</label>
-                                            <input type="text" class="form-control" id="CURP" formControlName="CURP">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>IMSS</label>
-                                            <input type="text" class="form-control" id="IMSS" formControlName="IMSS">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Estado civil</label>
-                                            <select class="form-control text-center" id="estadoCivil" formControlName="estadoCivil">
-                                            <option value="" selected>-- Seleccione una opción --</option>
-                                            <option>Soltero</option>
-                                            <option>Casado por lo civil</option>
-                                            <option>Divorciado legalmente</option>
-                                            <option>Separado legalmente</option>
-                                            <option>Viudo de matrimonio civil</option>
-                                            </select>
-                                        </div>
-                                    </div>
                                 </div>
-                            </div>
-                            <div *ngIf="mensajesDeError.length > 0" class="text-danger pt-3">
-                                <ul class="list-group">
-                                    <li class="list-group-item list-group-item-danger" *ngFor="let mensaje of mensajesDeError">{{ mensaje }}</li>
-                                </ul>
-                            </div>
-                            <div class="text-center pt-3">
-                                <button class="btn bg-pink">Guardar</button>
+                                <div *ngIf="mensajesDeError.length > 0" class="text-danger pt-3">
+                                    <ul class="list-group">
+                                        <li class="list-group-item list-group-item-danger" *ngFor="let mensaje of mensajesDeError">{{ mensaje }}</li>
+                                    </ul>
+                                </div>
+                                <div class="text-center pt-3">
+                                    <button class="btn bg-pink">Guardar</button>
+                                </div>
                             </div>
                         </div>
                     </div>
