--- a/src/app/pages/historiales-medicos/show/dependientes/dependientes.component.html
+++ b/src/app/pages/historiales-medicos/show/dependientes/dependientes.component.html
@@ -1,14 +1,14 @@
-<div class="card" *ngIf="dependientes">
+<div class="card">
     <div class="card-header text-secondary border-0">
       <h3 class="card-title text-center">Dependientes</h3>
       <button (click)="crearDependiente()" type="button" class="btn btn-sm btn-pink float-right" data-toggle="modal" data-target="#dependienteModal">
         <i class="fas fa-plus"></i> Dar alta
       </button>
     </div>
-    <div class="card-body table-responsive" *ngIf="dependientes !== undefined && dependientes!.length > 0">
+    <div class="card-body table-responsive" *ngIf="historialMedico?.pacientable?.dependientes !== undefined && historialMedico?.pacientable?.dependientes!.length > 0">
       <table class="table table-sm table-valign-middle">
           <tbody>
-              <tr *ngFor="let dependiente of dependientes">
+              <tr *ngFor="let dependiente of historialMedico?.pacientable?.dependientes">
                   <td>
                       {{ dependiente.nombre }}
                   </td>
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="modal fade" id="dependienteModal" tabindex="-1" role="dialog" aria-labelledby="dependienteModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header border-0">
             <h5 class="modal-title" id="dependienteModalLabel">
@@ -49,7 +49,7 @@
                     <div class="border rounded bg-light p-3 h-100">
                         <div class="form-group">
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" formControlName="imagen" id="imagen" required (change)="imagenSeleccionada($event)">
+                                <input type="file" class="custom-file-input" formControlName="imagen" id="imagen" (change)="imagenSeleccionada($event)">
                                 <label class="custom-file-label">Fotografía</label>
                             </div>
                         </div>
